--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ html.uk-height-1-1
 
 			ul.uk-list
 				each message in messages
-					li 
+					li.uk-margin-top
 						div.uk-panel.uk-panel-box
 							
 							.uk-panel-badge.uk-badge.uk-badge-info #{message.likes.length}
