bilder av kjekkaser

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,12 +7,12 @@ html.uk-height-1-1
 		.uk-container
 			h1 Socialcast ++
 			div.uk-grid
-			    div.uk-width-medium-1-2
-			        div.uk-panel
-			        	img(src='/images/heimert.jpg')
-			    div.uk-width-medium-1-2
-			        div.uk-panel
-			        	img(src='/images/morket.jpg')
+				div.uk-width-medium-1-2
+					div.uk-panel
+						img(src='/images/heimert.jpg', width='338')
+				div.uk-width-medium-1-2
+					div.uk-panel
+						img(src='/images/morket.jpg')
 			ul.uk-list
 				each message in messages
 					li.uk-margin-top
