--- a/views/index.jade
+++ b/views/index.jade
@@ -7,10 +7,13 @@ html.uk-height-1-1
 		.uk-container
 			h1 Socialcast ++
 			div.uk-grid
-				div.uk-width-medium-1-2
+				div.uk-width-medium-1-3
 					div.uk-panel
 						img(src='/images/heimert.jpg', width='338')
-				div.uk-width-medium-1-2
+				div.uk-width-medium-1-3.uk-text-center.uk-text-danger
+					div.uk-panel
+						ii.uk-icon-heart.uk-icon-large
+				div.uk-width-medium-1-3
 					div.uk-panel
 						img(src='/images/morket.jpg')
 			ul.uk-list
@@ -31,5 +34,5 @@ html.uk-height-1-1
 										each comment in message.comments
 											li 
 												p
-													h4 #{comment.user.name} 
+													h4 #{comment.user.name}
 													| #{comment.text}
